[package]
name = "chat-demo"
version = "0.1.0"
edition = "2021"
authors = ["Artyom Pavlov"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/newpavlov/chat-demo"
rust-version = "1.72"

[dependencies]
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
snafu = "0.8"
serde = { version = "1", features = ["derive"] }
bincode = "1.3"
